@@ -33,7 +33,7 @@
 /*
  * Portions Copyright (c) 2005 Gunnar Ritter, Freiburg i. Br., Germany
  *
- * Sccsid @(#)n7.c	1.104 (gritter) 9/9/06
+ * Sccsid @(#)n7.c	1.105 (gritter) 9/9/06
  */
 
 /*
@@ -180,6 +180,7 @@ tbreak(void)
 	if (lastl + un > dip->maxl)
 		dip->maxl = lastl + un;
 	horiz(un);
+	pchar(mkxfunc(INDENT, un));
 #ifdef NROFF
 	if (adrem % t.Adj)
 		resol = t.Hor; 
