@@ -19,6 +19,8 @@ Release ...
   previous value as "\s0" does.
 * [nt]roff: Arbitrary delimiters are now allowed with "\s''" escape
   sequences.
+* troff: The indent of the current line is no longer part of a PDF link
+  that continues from the previous line.
 
 Release 060905
 * [nt]roff: The new ".brnl" request causes a break each time a newline is
